--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 <body>
 <div class="main">
+  <form action="">
     <div class="inputs">
 
       <div id="card">
@@ -39,12 +40,13 @@
 
     </div>
     <div class="btn-btn">
-    <button id="btn"><img src="./assets/./images/./icon-arrow.svg" alt=""> </button>
+    <button type="submit" id="btn"><img src="./assets/./images/./icon-arrow.svg" alt=""/> </button>
     </div>
+  </form>
 
   <div class="display">
-  <label for=" display" id="day-output"></label>
-  <label for=" display" id="month-output"></label>
+  <label for=" display" id="day-output"></label><br>
+  <label for=" display" id="month-output"></label><br>
   <label for=" display" id="year-output"></label>
   
   </div>  
